<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/news_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small2"
        android:background="@color/colorWhite"
        card:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_small2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/news_cv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/news_category"
                android:textStyle="bold"
                android:textSize="@dimen/news_category"
                android:text="@string/category" />

            <TextView
                android:id="@+id/news_cv_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="@dimen/news_headline"
                android:text="@string/headline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_cv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textColor="@color/news_gray"
                    android:textSize="@dimen/news_author"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_small"
                    android:text="・"
                    android:textColor="@color/news_gray"
                    android:textSize="@dimen/news_author"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/news_cv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/news_gray"
                    android:textSize="@dimen/news_date" />
            </LinearLayout>

            <TextView
                android:id="@+id/news_cv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/news_desc"
                android:text="@string/description" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>